[gd_scene load_steps=20 format=1]

[ext_resource path="res://scripts/gui/gui.gd" type="Script" id=1]
[ext_resource path="res://assets/game/overlayBackground.png" type="Texture" id=2]
[ext_resource path="res://themes/text30.tres" type="Theme" id=3]
[ext_resource path="res://assets/gui/inv_misc_bag_08.jpg" type="Texture" id=4]
[ext_resource path="res://assets/gui/inv_misc_bag_08_u.jpg" type="Texture" id=5]
[ext_resource path="res://assets/gui/inv_misc_bag_08_d.jpg" type="Texture" id=6]
[ext_resource path="res://assets/gui/inv_misc_note_04.jpg" type="Texture" id=7]
[ext_resource path="res://assets/gui/inv_misc_note_04_u.jpg" type="Texture" id=8]
[ext_resource path="res://assets/gui/inv_misc_note_04_d.jpg" type="Texture" id=9]
[ext_resource path="res://assets/gui/inv_misc_book_08.jpg" type="Texture" id=10]
[ext_resource path="res://assets/gui/inv_misc_book_08_u.jpg" type="Texture" id=11]
[ext_resource path="res://assets/gui/inv_misc_book_08_d.jpg" type="Texture" id=12]
[ext_resource path="res://assets/gui/icon_treasuremap.jpg" type="Texture" id=13]
[ext_resource path="res://assets/gui/icon_treasuremap_u.jpg" type="Texture" id=14]
[ext_resource path="res://assets/gui/icon_treasuremap_d.jpg" type="Texture" id=15]
[ext_resource path="res://assets/gui/inv_misc_gear_01.jpg" type="Texture" id=16]
[ext_resource path="res://assets/gui/inv_misc_gear_01_u.jpg" type="Texture" id=17]
[ext_resource path="res://assets/gui/inv_misc_gear_01_d.jpg" type="Texture" id=18]

[sub_resource type="Animation" id=1]

resource/name = "displayComments"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("comments:visible_characters")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 9.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 256, 5 ]
}

[node name="gui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="guiBackground" type="TextureFrame" parent="."]

visibility/opacity = 0.3
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 110.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="comments" type="RichTextLabel" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 3 )
margin/left = 500.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 90.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = 0
percent_visible = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="PanelContainer" type="PanelContainer" parent="."]

visibility/self_opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 450.0
margin/bottom = 70.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 443.0
margin/bottom = 91.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="inventoryButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]

hint/tooltip = "Inventaire (I)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 84.0
margin/bottom = 84.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 4 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="logButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]

hint/tooltip = "Journal (J)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 88.0
margin/top = 0.0
margin/right = 172.0
margin/bottom = 84.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 7 )
textures/hover = ExtResource( 8 )
textures/disabled = ExtResource( 9 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="encyclopediaButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]

hint/tooltip = "Encyclop√©die (L)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 176.0
margin/top = 0.0
margin/right = 260.0
margin/bottom = 84.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 10 )
textures/hover = ExtResource( 11 )
textures/disabled = ExtResource( 12 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="mapButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]

hint/tooltip = "Carte (M)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 264.0
margin/top = 0.0
margin/right = 348.0
margin/bottom = 84.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 13 )
textures/hover = ExtResource( 14 )
textures/disabled = ExtResource( 15 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="menuButton" type="TextureButton" parent="PanelContainer/HBoxContainer"]

hint/tooltip = "Menu (Echap)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 352.0
margin/top = 0.0
margin/right = 436.0
margin/bottom = 84.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 16 )
textures/hover = ExtResource( 17 )
textures/disabled = ExtResource( 18 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 1.5 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/displayComments = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="PanelContainer/HBoxContainer/inventoryButton" to="." method="_on_inventoryButton_pressed"]

[connection signal="pressed" from="PanelContainer/HBoxContainer/logButton" to="." method="_on_logButton_pressed"]

[connection signal="pressed" from="PanelContainer/HBoxContainer/encyclopediaButton" to="." method="_on_encyclopediaButton_pressed"]

[connection signal="pressed" from="PanelContainer/HBoxContainer/mapButton" to="." method="_on_mapButton_pressed"]

[connection signal="pressed" from="PanelContainer/HBoxContainer/menuButton" to="." method="_on_menuButton_pressed"]


